--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@types/exit-hook": "^1.1.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^11.9.5",
-    "@types/term-size": "^1.2.0",
-    "@types/window-size": "^0.2.4",
     "@zeit/ncc": "^0.15.2",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
@@ -38,7 +36,6 @@
     "watch": "node_modules/.bin/tsc -w"
   },
   "dependencies": {
-    "exit-hook": "^2.0.0",
-    "term-size": "^1.2.0"
+    "exit-hook": "^2.0.0"
   }
 }
